name:                scripts
version:             0.1.0.0
synopsis:            Haskell scripts using `Turtle` to replace my bash scripts
license:             BSD3
author:              Ben Pence
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable volume
  main-is:             volume.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optional-args
                     , text
                     , turtle
  default-language:    Haskell2010

executable rename-by-exif
  main-is:             rename-by-exif.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
                     , mtl
                     , optional-args
                     , system-filepath
                     , text
                     , turtle
  default-language:    Haskell2010
